fixing spacing on reviews display

--- a/react-app/src/components/ReviewsDisplay/ReviewsDisplay.module.css
+++ b/react-app/src/components/ReviewsDisplay/ReviewsDisplay.module.css
@@ -91,7 +91,7 @@
 	flex-direction: row;
 	align-items: center;
 	width: 80%;
-	justify-content: space-around;
+	justify-content: center;
 	font-size: 14px;
 	margin-top: 10px;
 }
